fix alignment

--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ p, a, li, footer, span, sup, figcaption, .desc {
     text-align: left;
 } 
 
+
+
 /* PADDING */
 
 main {
@@ -107,6 +109,8 @@ a {
     padding-right: 40px;
     padding-top: 20px;
     padding-bottom: 20px;
+    line-height: 1.5;
+    }
 
 }
 
